Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -79,7 +79,6 @@ body {
             -moz-border-radius-bottomleft: 5px;
             border-bottom-right-radius: 5px;
             border-bottom-left-radius: 5px;
-            float: none;
             margin: 0 auto;
             text-align: center;
             padding: 0 1em;
